--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,16 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.4.0</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <url>http://localhost:8080/manager/text</url>
+          <server>tomcat-server</server>
+          <path>/</path>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
